--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chart.js",
+  "name": "aligned-chart.js",
   "homepage": "https://www.chartjs.org",
   "description": "Simple HTML5 charts using the canvas element.",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "license": "MIT",
   "jsdelivr": "dist/Chart.min.js",
   "unpkg": "dist/Chart.min.js",
